se agrego gorm errors
